# parp_01

./: .gitignore  .mcp.json  CLAUDE.md  CMakeLists.txt  README.md  prj.conf
boards/: nucleo_h723zg.overlay
docs/: AI_AGENT_CONFIG.md  CODE_REVIEW.md  CODE_REVIEW_FIX_PLAN.md  CODE_REVIEW_RESPONSE.md  E310_LIBRARY.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_V2.md  README.md  RFID_PAD_IMPLEMENTATION_PLAN.md  RFID_SYSTEM_DESIGN.md  SESSION_NOTES.md  SHELL_LOGIN_PLAN.md  USB_NEXT_MIGRATION_PLAN.md  USB_NEXT_MIGRATION_SUMMARY.md  V2_QUICK_START.md
reference/lib/: README.md
reference/protocol/: Protocol_0x01_Tag_Inventory.md  Protocol_0x02_Read_Data.md  Protocol_0x03_Write_Data.md  Protocol_0x04_Write_Epc.md  Protocol_0x05_Kill_Tag.md  Protocol_0x06_Set_Protection.md  Protocol_0x07_Block_Erase.md  Protocol_0x08_Read_Protection_By_Epc.md  Protocol_0x09_Read_Protection_Without_Epc.md  Protocol_0x0A_Unlock_Read_Protection.md  Protocol_0x0B_Read_Protection_Status_Check.md  Protocol_0x0C_Eas_Configuration.md  Protocol_0x0D_Eas_Alert_Detection.md  Protocol_0x0F_Single_Tag_Inventory.md  Protocol_0x10_Block_Writing.md  Protocol_0x11_Obtain_Monza4qt_Params.md  (+47 more)
src/: beep_control.c  beep_control.h  e310_protocol.c  e310_protocol.h  e310_protocol_v1_backup.c  e310_protocol_v1_backup.h  e310_protocol_v2.h  e310_settings.c  e310_settings.h  e310_test.c  main.c  password_storage.c  password_storage.h  rgb_led.c  rgb_led.h  shell_login.c  shell_login.h  switch_control.c  switch_control.h  uart_router.c  uart_router.h  usb_device.c  usb_device.h  usb_hid.c  usb_hid.h
(+20 files in other folders)
